@@ -1523,6 +1523,16 @@ namespace libtorrent
 		if (picker().is_finished(block_finished)) return;
 
 		picker().mark_as_finished(block_finished, 0);
+
+		if (picker().is_piece_ready(block_finished.piece_index))
+		{
+			if (alerts().should_post<piece_ready_alert>())
+			{
+				alerts().emplace_alert<piece_ready_alert>(get_handle(),
+					block_finished.piece_index);
+			}
+		}
+
 		maybe_done_flushing();
 	}
 
@@ -4381,6 +4391,14 @@ namespace {
 
 		if (m_ses.alerts().should_post<piece_finished_alert>())
 			m_ses.alerts().emplace_alert<piece_finished_alert>(get_handle(), index);
+
+		if (has_picker() && picker().is_piece_ready(index))
+		{
+			if (alerts().should_post<piece_ready_alert>())
+			{
+				alerts().emplace_alert<piece_ready_alert>(get_handle(), index);
+			}
+		}
 
 		// update m_file_progress (if we have one)
 		m_file_progress.update(m_torrent_file->files(), index
